@@ -4,18 +4,20 @@ import gui.AlertType;
 import xyz.derkades.plex4j.Server;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import static gui.App.alert;
 
-public class TestPlexConnection extends Thread {
+public class
+TestPlexConnection extends Thread {
 
     public TestPlexConnection() {
 
     }
 
-    private void testPlex() throws IOException {
-        Server server = new Server(new URL(new Config().getPlexIp()),new Config().getPlexToken()); //haha lazy code go brrrrrrrrrrrr
+    private void testPlex() throws IOException, URISyntaxException {
+        Server server = new Server(new URI(Config.getPlexIp()).toURL(),Config.getPlexToken());
         if(server.testConnection() != null) {
             alert(AlertType.ERROR, "Cannot connect to plex server. All plex features will not be avaliable.\n" + server.testConnection());
         }
@@ -27,7 +29,7 @@ public class TestPlexConnection extends Thread {
         super.run();
         try {
             testPlex();
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             alert(AlertType.ERROR, "Cannot connect to Plex server - the config value does not exist.\n" + e.getLocalizedMessage());
         }
     }
