@@ -4,7 +4,8 @@ import gui.AlertType;
 import xyz.derkades.plex4j.Server;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import static gui.App.alert;
 
@@ -14,8 +15,8 @@ public class TestQbittorrentConnection extends Thread{
 
     }
 
-    private void testQbittorrent() throws IOException {
-        Server server = new Server(new URL(new Config().getQbittorrentIp()),new Config().getPlexToken()); //haha lazy code go brrrrrrrrrrrr
+    private void testQbittorrent() throws IOException, URISyntaxException {
+        Server server = new Server(new URI(Config.getQbittorrentIp()).toURL(),Config.getPlexToken());
         if(server.testConnection() != null) {
             alert(AlertType.FATAL, "Cannot connect to Qbittorrent WebUI server. The program will now exit.\n" + server.testConnection());
             System.exit(1);
@@ -27,7 +28,7 @@ public class TestQbittorrentConnection extends Thread{
         super.run();
         try {
             testQbittorrent();
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             alert(AlertType.ERROR, "Cannot connect to Qbittorrent WebUI server - the config value does not exist.\nThe program will now exit\n" + e.getLocalizedMessage());
             System.exit(1);
         }
